force-app/main/default/objects/Questionnaire_Task__c/Questionnaire_Task__c.object-meta.xml
<CustomObject>
    <label>Questionnaire Task</label>
    <nameField>
        <label>Questionnaire Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaire Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>