force-app/main/default/objects/Questionnaire_Task__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Questionnaire Tasks</relationshipLabel>
    <relationshipName>Questionnaire_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>