force-app/main/default/objects/Questionnaire_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upload Photo</fullName>
            </value>
            <value>
                <fullName>Schedule a Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>